# anthropic-engineering-ja

./: .gitignore  README.md  index.json  pyproject.toml
.github/workflows/: check-new-articles.yml  check-new-claude-articles.yml  deploy-pages.yml  publish-new-article.yml  publish-new-claude-article.yml
articles/claude_en/: 01_claude-and-slack.md  01_code-review.md  02_claude-builds-visuals.md  02_claude-code-on-the-web.md  02_skills.md  03_1m-context-ga.md  04_building-ai-agents-in-financial-services.md  05_improving-frontend-design-through-skills.md  05_product-management-on-the-ai-exponential.md  06_how-enterprises-are-building-ai-agents-in-2026.md  07_auto-mode.md  07_interactive-tools-in-claude.md  08_claude-managed-agents.md  08_claude-platform-compliance-api.md  08_cowork-plugins.md  09_improved-web-search-with-dynamic-filtering.md  12_carta-healthcare-clinical-abstractor.md  13_code-with-claude-san-francisco-london-tokyo.md  15_harnessing-claudes-intelligence.md  16_seeing-like-an-agent.md  17_multi-agent-coordination-patterns.md  17_the-advisor-strategy.md  18_cowork-for-enterprise.md  18_using-claude-code-session-management-and-1m-context.md  19_claude-code-desktop-redesign.md  20_dispatch-and-computer-use.md  20_introducing-routines-in-claude-code.md  21_how-enterprises-are-building-ai-agents-in-2026.md  22_improving-frontend-design-through-skills.md  (+30 more)
scripts/: _date_extract.py  articles.py  build_pdf.py  build_site.py  check_new_articles.py  check_new_claude_articles.py  claude_articles.py  fetch_article.py  fetch_claude_article.py  style.css  template.html
(+118 files in other folders)
